build.log

> jpcloud@0.0.0 build
> docusaurus build

[ERROR] /opt/website/docusaurus.config.js:22
  ],
  ^

SyntaxError: Unexpected token ']'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1078:15)
    at Module._compile (node:internal/modules/cjs/loader:1113:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1203:10)
    at Module.load (node:internal/modules/cjs/loader:1027:32)
    at Module._load (node:internal/modules/cjs/loader:868:12)
    at Module.require (node:internal/modules/cjs/loader:1051:19)
    at module.exports (/opt/website/node_modules/import-fresh/index.js:32:59)
    at loadSiteConfig (/opt/website/node_modules/@docusaurus/core/lib/server/config.js:36:55)
    at async loadContext (/opt/website/node_modules/@docusaurus/core/lib/server/index.js:31:63)
[INFO] Docusaurus version: 2.1.0
Node version: v18.10.0
